# oneTBB

./: CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SYSTEM_REQUIREMENTS.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/scripts/: codespell.sh
.github/workflows/: ci.yml  codeql.yml  coverity.yml  issue_labeler.yml  labeler.yml  ossf-scorecard.yml
GSG/: before_beginning_and_example.html  examples.html  get_started.html  hybrid_cpu_support.html  installation.html  integrate.html  intro_gsg.html  next_steps.html  samples.html  system_requirements.html
_sources/GSG/: integrate.rst  intro_gsg.rst  samples.rst
_sources/index/: toctree.rst
cmake/: README.md  sanitize.cmake
cmake/compilers/: Clang.cmake  GNU.cmake  IntelLLVM.cmake  MSVC.cmake
doc/: conf.py
doc/GSG/: intro_gsg.rst  next_steps.rst
doc/index/: toctree.rst
doc/main/examples_testing/: CMakeLists.txt
examples/sycl/: README.md
examples/sycl/tbb-async-sycl/: CMakeLists.txt  README.md
include/oneapi/: tbb.cppm
index/: index_intro.html  toctree.html  useful_topics.html
main/intro/: Benefits.html  api_abi_changes.html  help_support.html  intro_os.html  limitations.html  notation.html  testing_approach.html
main/reference/: assertion_handler.html  blocked_nd_range_ctad.html  concurrent_lru_cache_cls.html  constructors_for_nodes.html  core_type_selector.html  custom_mutex_chmap.html  feature_test_macros.html  fg_resource_limiting.html  follows_and_precedes_functions.html  helpers_for_expressing_graphs.html  make_edges_function.html  make_node_set_function.html  numa_interleaved_allocation.html  parallel_for_each_semantics.html  parallel_phase_for_task_arena.html  parallel_sort_ranges_extension.html  reference.html  rvalue_reduce.html  scalable_memory_pools.html  task_group_bypass_support.html  task_group_dynamic_dependencies.html  task_group_extensions.html  try_put_and_wait.html  type_specified_message_keys.html
main/specification/: LICENSE.html
main/tbb_userguide/: Advanced_Example.html  Advanced_Topic_Other_Kinds_of_Iteration_Spaces.html  Allocator_Configuration.html  Automatic_Chunking.html  Bandwidth_and_Cache_Affinity_os.html  Basic_Flow_Graph_concepts.html  Cancellation_Without_An_Exception.html  Cancellation_and_Nested_Parallelism.html  Concurrent_Queue_Classes.html  Constraints.html  Containers.html  Controlling_Chunking_os.html  Cook_Until_Done_parallel_do.html  Data_Flow_Graph.html  Debug_Versus_Release_Libraries.html  Dependence_Graph.html  Edges.html  Exceptions_and_Cancellation.html  Floating_Point_Settings.html  Flow-Graph-exception-tips.html  Flow-Graph-waiting-tips.html  Flow_Graph.html  Flow_Graph_Buffering_in_Nodes.html  Flow_Graph_Message_Passing_Protocol.html  Flow_Graph_Reservation.html  Flow_Graph_Single_Vs_Broadcast.html  Flow_Graph_Tips.html  Flow_Graph_making_edges_tips.html  Flow_Graph_nested_parallelism_tips.html  Flow_Graph_resource_tips.html  Graph_Main_Categories.html  Graph_Object.html  Guiding_Task_Scheduler_Execution.html  How_Task_Scheduler_Works.html  Initializing_and_Terminating_the_Library.html  Iterating_Over_a_Concurrent_Queue_for_Debugging.html  Lambda_Expressions.html  Linux_C_Dynamic_Memory_Interface_Replacement.html  Linux_OS.html  Lock_Pathologies.html  (+73 more)
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py.in
python/tbb/: api.i
src/tbb/: allocator.cpp  arena.cpp  arena.h  cgroup_info.h  co_context.h  concurrent_monitor.h  dynamic_link.cpp  governor.cpp  misc.h  misc_ex.cpp  numa_allocation.cpp  queuing_rw_mutex.cpp  scheduler_common.h  task.cpp  task_dispatcher.h  tbb.rc  thread_data.h
src/tbbbind/: tbb_bind.cpp  tbb_bind.rc
src/tbbmalloc/: CMakeLists.txt  frontend.cpp  large_objects.cpp  large_objects.h  tbbmalloc.rc  tbbmalloc_internal.h
src/tbbmalloc_proxy/: proxy.cpp  tbbmalloc_proxy.rc
test/: CMakeLists.txt
test/common/: common_arena_constraints.h  concurrent_ordered_common.h  concurrent_unordered_common.h  config.h  container_move_support.h  doctest.h  graph_utils.h  memory_usage.h  test_invoke.h  utils.h  (+2 more)
thread_composability_manager/: .gitignore  CMakeLists.txt  README.md
thread_composability_manager/cmake/: README.md  generate_vars.cmake  vars_utils.cmake
thread_composability_manager/cmake/compilers/: Clang.cmake  GNU.cmake  Intel.cmake  IntelLLVM.cmake  MSVC.cmake
thread_composability_manager/cmake/modules/: FindHWLOC.cmake
thread_composability_manager/cmake/post_install/: CMakeLists.txt
thread_composability_manager/doc/: index.rst
thread_composability_manager/include/: tcm.h
thread_composability_manager/include/tcm/: types.h  version.h
thread_composability_manager/include/tcm/detail/: _config.h  _environment.h  _export.h  _tcm_assert.h  hwloc_utils.h
thread_composability_manager/integration/linux/modulefiles/: tcm  tcm32
thread_composability_manager/integration/linux/vars/: vars.sh.in
thread_composability_manager/integration/windows/vars/: vars.bat.in
thread_composability_manager/licensing/: LICENSE.txt
thread_composability_manager/rfcs/: README.md  template.md
thread_composability_manager/rfcs/archived/: README.md
thread_composability_manager/rfcs/experimental/: README.md
thread_composability_manager/rfcs/proposed/: README.md
thread_composability_manager/rfcs/supported/: README.md
thread_composability_manager/src/: CMakeLists.txt  tcm.cpp  tcm.rc.in  tcm_permit_rep.h  utils.h  version.cpp
thread_composability_manager/src/detail/: _environment.h  _tcm_assert.h  hwloc_utils.h
thread_composability_manager/src/linux/: cgroup_info.h
thread_composability_manager/src/tracing/: _callstack_tracer.h  _permit_tracer.h  _tracer.h  _tracing_utils.h
thread_composability_manager/test/: CMakeLists.txt  basic_test_utils.h  common_tests.h  concurrency_utils.h  hwloc_test_utils.h  test_basic_apis.cpp  test_cgroup_support.cpp  test_constrained_requests.cpp  test_exceptions.h  test_fcfsc.cpp  test_fuzzing.cpp  test_premature_exit.cpp  test_rb.cpp  test_tcm_disabling.cpp  test_tcm_environment.cpp  test_tcm_version.cpp  test_thread_pool.h  test_utils.h
(+546 files in other folders)
